feat: Implement comprehensive Spring Security with JWT, role-based authorization, and CORS, and introduce a new vehicle management API.